@@ -1,2 +1,3 @@
 --add-opens=java.base/java.lang=ALL-UNNAMED
 --add-opens=java.base/java.io=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED
